# netbox_dhcp_kea_plugin

./: .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  IMPLEMENTATION.md  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/ISSUE_TEMPLATE/: bug_report.yaml  config.yml  feature_request.yaml
.github/workflows/: publish-pypi.yaml
changelog/: index.html
contributing/: index.html
netbox_dhcp_kea_plugin/: __init__.py  filtersets.py  forms.py  models.py  navigation.py  tables.py  template_content.py  urls.py  views.py
netbox_dhcp_kea_plugin/api/: serializers.py  urls.py  views.py
netbox_dhcp_kea_plugin/management/commands/: generate_kea_demo_data.py
netbox_dhcp_kea_plugin/migrations/: 0001_initial.py  0002_optiondefinition_is_standard.py
netbox_dhcp_kea_plugin/templates/netbox_dhcp_kea_plugin/: clientclass.html  clientclass_servers.html  dhcp-kea.html  dhcphapeer.html  dhcpharelationship.html  dhcpserver.html  dhcpserver_kea_config.html  dhcpserver_prefixes.html  optiondata.html  optiondata_clientclasses.html  optiondefinition.html  optiondefinition_list.html  prefixdhcpconfig.html  prefixdhcpconfig_reservations.html  vendoroptionspace.html
netbox_dhcp_kea_plugin/templates/netbox_dhcp_kea_plugin/inc/: option_data_table.html  optiondefinition_table_controls.html  prefix_dhcp_panel.html
search/: search_index.json
tests/: __init__.py  conftest.py  test_ha_models.py  test_management_commands.py  test_models.py  test_netbox_dhcp_kea_plugin.py  test_views.py
